overflow button fix

--- a/style1.css
+++ b/style1.css
@@ -183,7 +183,7 @@ nav {
   }
 
   .primary-navigation a {
-    padding: 18px 289px;
+    padding: 1rem 8.3rem;
     border-radius: 0;
     transition: 0.1s;
   }
